<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_StudentRegister"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.idlogin.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_wallet_svit"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/signup_login"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="30dp"
android:layout_marginRight="30dp"
android:layout_marginTop="100dp"
android:orientation="vertical">

<EditText
    android:id="@+id/UserName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@android:color/background_light"
    android:ems="10"
    android:hint="@string/enrolment_number"
    android:inputType="text"
    android:padding="15dp"
    android:textColorHint="?attr/colorButtonNormal" />

    <EditText
    android:id="@+id/Password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@android:color/background_light"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textWebPassword"
    android:padding="15dp"
    android:textColorHint="?attr/colorButtonNormal" />

<Button
    android:id="@+id/LoginStudent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="#999999"
    android:text="@string/student_login"
    android:textSize="20sp"
    android:textColor="#000000"
    android:textStyle="bold" />

    <Button
        android:id="@+id/LoginFaculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#999999"
        android:text="@string/faculty_login"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/LoginKeeper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#999999"
        android:text="@string/keeper_login"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/LoginAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#999999"
        android:text="@string/admin_login"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/SignUp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#999999"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />
</LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/KeeperLoginPage"></FrameLayout>
    </RelativeLayout>

</ScrollView>