<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.idlogin.Fragments.StudentTransactionHomePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/radioGroup">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_balance"
            android:textSize="40sp"
            android:id="@+id/balanceCheck" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="40sp"
            android:id="@+id/summary"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/stop_service"
            android:id="@+id/stopService"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recharge"
            android:textSize="40sp"
            android:id="@+id/recharge"/>
    </RadioGroup>

    <FrameLayout
        android:id="@+id/FragmentTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"></FrameLayout>
</RelativeLayout>
</ScrollView>
